fix layout overflow

--- a/master.css
+++ b/master.css
@@ -74,6 +74,7 @@ header {
     max-width: 100%;
     aspect-ratio: 1/1;
     text-align: center;
+    overflow: hidden;
 }
 
 #decoded-canvas {
